Bug 1304134 - Part 1: Per spec. (https://dev.w3.org/html5/spec-preview/media-elements.html#ready-states) 'playing' should be fired before activating autoplay. r=cpearce, a=gchang Also replace the check for IsPotentiallyPlaying() with !mPaused because mReadyState >= HAVE_FUTURE_DATA guarantees playback is not ended.

MozReview-Commit-ID: HetaVDgYEW0

--HG--
extra : source : bf73c623fb64dc591a7963a86b4b0f8cae34a368
extra : histedit_source : 99908e8c972be3586fe1ebb0897345ae1c06d745